# Plant-OS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  issue_rules.md
.VSCodeCounter/2024-07-20_01-06-24/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Loader/: Makefile
Loader/base/: Makefile  asmfunc.asm  dosldr.c
Loader/driver/: Makefile  ahci.c  fdc.c  gdtidt.c  vdisk.c
Loader/fs/: Makefile  fat.c  pfs.c  vfs.c
Loader/include/: dosldr.h
apps/: CMakeLists.txt  Makefile  defs.mk
apps/Maze/: Makefile  Maze.c
apps/SDL2_image/: IMG.c  Makefile  version.rc
apps/SDL2_ttf/: Makefile
apps/aigobang/: Makefile  aigobang.c
apps/bainian/: Makefile
apps/basic/: Makefile  basic.c
apps/bfpp/: LICENSE  Makefile  bfpp.c
apps/bim2hrb/: Makefile
apps/bitz/: Makefile  bitz.c
apps/brainfuck/: Makefile
apps/c4/: Makefile
apps/cal/: Makefile  cal.c
apps/calc/: Makefile
apps/cale/: Makefile  cale.c
apps/cc/: Makefile
apps/cgobang/: Makefile
apps/chat/: Makefile  chat.c
apps/clock/: Makefile
apps/copy/: Makefile  copy.c
apps/plui/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.cpp
apps/plui/cmake/: gtest  mkheader  mklib  show-flags
apps/plui/include/: CMakeLists.txt  c.h  config.h  cpp.hpp  define.h  osapi.h  pl2d.hpp  plds.hpp  plui.hpp  type.h  type.hpp  type_traits
apps/plui/include/c/: color.h  crypto.h  errno.h  error.h  file.h  rbtree.h  string.h  syscall.h
apps/plui/include/c/math/: base.h  bits.h  exp-log.h  math.h  sqrt.h
apps/plui/include/c/math/complex/: base.h  fft.h
apps/plui/include/cpp/: exch.hpp  gaussian-blur.hpp  list.hpp  property.hpp  rbtree.hpp  string.hpp
apps/plui/include/cpp/io/: file.hpp
apps/plui/include/cpp/math/: README.md  base.hpp  bits.hpp  exp-log.hpp  math.hpp  sin.hpp  sqrt.hpp  sum.hpp
apps/plui/include/cpp/math/complex/: base.hpp  exp.hpp  fft.hpp
apps/plui/include/pl2d/: CMakeLists.txt  ctx.hpp  fb.h  fb.hpp  matrix.hpp  pixel.hpp  point.hpp  points.hpp  texture.hpp
apps/plui/include/pl2d/fb/: fmt.plht-
apps/plui/include/pl2d/pixel/: define.hpp  op.hpp  pixel.hpp  using.hpp
apps/plui/include/pl2d/points/: col.hpp  line.hpp  rect.hpp  row.hpp
apps/plui/include/pl2d/texture/: get-set.hpp  paste.hpp  texture.hpp  trans.hpp
apps/plui/include/plds/: CMakeLists.txt  client.hpp  server.hpp
apps/plui/include/plds/server/: api.h  api.hpp  var.hpp
apps/plui/include/plui/: element.hpp  event.hpp  pos.hpp  wnd.hpp
apps/plui/src/: CMakeLists.txt
apps/plui/src/c/: CMakeLists.txt  color.c  error.c  string.c
apps/plui/src/c/crypto/: base64.c  caesar.c  hash.c  hex.c  sha256.c
apps/plui/src/c/fft/: f128.c  f32.c  f64.c
apps/plui/src/cpp/: CMakeLists.txt  fft.cpp  gaussian-blur.cpp
apps/plui/src/pl2d/: CMakeLists.txt  context.cpp  fb.cpp  fb.hpp  line-clamp.cpp  phd.cpp
apps/plui/src/pl2d/fb/: fb.hpp  flush-bgr.hpp  flush-cases.hpp  flush-loop.hpp  flush-rgb.hpp  flush-rgb565.hpp  private.hpp
apps/plui/src/pl2d/pix/: color-space.cpp  gamma.cpp  gamma.hpp  gray.cpp  it.cpp  lab2xyz.lut.h  mix.cpp  pixel.cpp  rgb2xyz.lut.h  xyz2lab.lut.h  xyz2rgb.lut.h
apps/plui/src/pl2d/tex/: blur.cpp  copy.cpp  draw.cpp  fft.cpp  get-set.cpp  init.cpp  paste.cpp  resize.cpp  trans.cpp
apps/plui/src/plds/: CMakeLists.txt
apps/plui/src/plds/base/: CMakeLists.txt
apps/plui/src/plds/client/: CMakeLists.txt
apps/plui/src/plds/server/: CMakeLists.txt  api-transform.cpp  server.cpp
apps/plui/src/plui/: CMakeLists.txt
apps/plui/tool/: plht.py  test.h  test.hpp  test.plht
chat/: client.py  server.py
cmake/: add_binary  util
doc/: README_zh-cn.md  kernel.md  pfs.html  pfs.md
fattools/: CMakeLists.txt  main.cpp
include/: copi143-define.h  define.h  type.h
kernel/: CMakeLists.txt  Makefile  bochsrc.txt  bx_enh_dbg.ini  cpos.iso  cpos.iso.uibak  run.sh  serial.txt
kernel/boot/: boot.asm  boot32.asm  boot_pfs.asm
kernel/cmd/: Makefile  chat.c  command.c  execbatch.c  netgobang.c
kernel/dos/asm/: Makefile  errors.asm  handlers.asm  i386.asm  int32.asm
kernel/dos/cpu/: Makefile  farcall.c  gdtidt.c
kernel/dos/hal/: Makefile  mount.c
kernel/dos/init/: Makefile  init.c  kernelc.c  main.c
kernel/dos/mm/: Makefile  mem.c  page.c
kernel/dos/syscall/: Makefile  syscall.c
kernel/dos/task/: Makefile  basetask.c  execute.c  ipc.c  lock.c  mtask.c  signal.c
kernel/dos/tools/: Makefile  bit.c  fifo.c  list.c  md5.c  other.c  rand.c  time.c
kernel/drivers/: Makefile  acpi.c  ahci.c  beep.c  cmos.c  dma.c  driver.c  floppy.c  harddisk.c  ide.c  keyboard.c  mouse.c  network.c  pci.c  pcnet.c  pic.c  rtc.c  rtl8139.c  sb16.c  timer.c  vbe.c  vdisk.c  vga.c
kernel/fs/: Makefile  bmp.c  elf.c  fat.c  file.c  iniReader.c  iso9660.c  path.c  pfs.c  rootfs.c  vfs.c
kernel/include/: CMakeLists.txt  ELF.h  cmd.h  ctypes.h  define.h  dos.h  drivers.h  fcntl.h  fs.h  interrupts.h  io.h  kernel.h  libstdc++.hpp  limits.h  mst.h  mstr.h  net.h  pfs.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h
kernel/include/kernel/: CMakeLists.txt  acpi.h  cmos.h  config.h  cpu.h  debug.h  dos.h  driver.h  fifo.h  fs.h  gdtidt.h  ide.h  input_stack.h  kbd.h  list.h  mm.h  mouse.h  net.h  page.h  pci.h  pcnet.h  pic.h  sb16.h  screen.h  sheet.h  signal.h  task.h  timer.h  tty.h  vbe.h  vdisk.h  vga.h
kernel/include/kernel/net/: arp.h  dhcp.h  dns.h  ftp.h  http.h  ipv4.h  net.h  ntp.h  socket.h
kernel/io/: Draw.c  HighTextMode.c  Input_Stack.c  Makefile  TextMode.c  fartty.c  input.c  log.c  screen.c  sheet.c  tty.c
kernel/mst/: Makefile  build.c  mst.c
kernel/net/: Makefile  arp.c  dhcp.c  dns.c  etherframe.c  ftp.c  http.c  icmp.c  ipv4.c  net_syscall.c  ntp.c  socket.c  tcp.c  udp.c
kernel/res/: code.st  fib.lua  init.mst  setup.bat  setup.mst  std.st  sys.cfg
kernel/std/: Makefile  libcpp.cpp  linux_style_file.c  std.c
libtcc1/: CMakeLists.txt
loader/: CMakeLists.txt
log/: 1.0-dev-0.1.md  1.0-dev-0.2.md  1.0-dev-0.3.md
netgobang/: CMakeLists.txt  main.cpp
(+417 files in other folders)
